--- a/edx_proctoring/locale/ru/LC_MESSAGES/django.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/django.po
@@ -64,11 +64,11 @@ msgstr ""
 
 #: admin.py:385
 msgid "Declined"
-msgstr ""
+msgstr "Отказано"
 
 #: admin.py:386
 msgid "Timed Out"
-msgstr ""
+msgstr "Время вышло"
 
 #: admin.py:387
 msgid "Submitted"
@@ -345,14 +345,14 @@ msgid ""
 "\n"
 "      The due date for this exam has passed\n"
 "    "
-msgstr ""
+msgstr "Сроки сдачи экзамена прошли.\n"
 
 #: templates/proctored_exam/expired.html:9 templates/timed_exam/expired.html:9
 msgid ""
 "\n"
 "      Because the due date has passed, you are no longer able to take this exam.\n"
 "    "
-msgstr ""
+msgstr "Поскольку самые поздние сроки сдачи экзамена прошли, вы не можете сдать его.\n"
 
 #: templates/proctored_exam/failed-prerequisites.html:9
 #, python-format
@@ -620,7 +620,7 @@ msgid ""
 "\n"
 "      Make sure that you have selected \"Submit\" for each problem before you submit your exam.\n"
 "    "
-msgstr ""
+msgstr "Убедитесь что вы нажали \"Отправить\" на каждом задании перед тем как завершить экзамен.\n"
 
 #: templates/proctored_exam/ready_to_submit.html:14
 msgid ""
@@ -730,38 +730,38 @@ msgid ""
 "\n"
 "    %(exam_name)s is a Timed Exam (%(total_time)s)\n"
 "    "
-msgstr ""
+msgstr "%(exam_name)s является экзаменом с ограничением по времени (%(total_time)s)\n"
 
 #: templates/timed_exam/entrance.html:9
 msgid "This exam has a time limit associated with it."
-msgstr ""
+msgstr "Время отведённое на сдачу этого экзамена ограничено."
 
 #: templates/timed_exam/entrance.html:11
 msgid "To pass this exam, you must complete the problems in the time allowed."
-msgstr ""
+msgstr "Чтобы пройти его, вы должны решить все задания за выделенное время."
 
 #: templates/timed_exam/entrance.html:13
 msgid "After you select "
-msgstr ""
+msgstr "После того как вы нажмёте "
 
 #: templates/timed_exam/entrance.html:15
 msgid "I am ready to start this timed exam,"
-msgstr ""
+msgstr "Я готов к началу экзамена,"
 
 #: templates/timed_exam/entrance.html:17
 msgid "you will have "
-msgstr ""
+msgstr "у вас будет "
 
 #: templates/timed_exam/entrance.html:17
 msgid " to complete and submit the exam."
-msgstr ""
+msgstr " чтобы решить все задания и отправить их на проверку."
 
 #: templates/timed_exam/entrance.html:21
 msgid ""
 "\n"
 "        I am ready to start this timed exam.\n"
 "      "
-msgstr ""
+msgstr "Я готов к началу экзамена.\n"
 
 #: templates/timed_exam/footer.html:3
 msgid "Can I request additional time to complete my exam?"
@@ -781,42 +781,42 @@ msgid ""
 "\n"
 "      Are you sure that you want to submit your timed exam?\n"
 "    "
-msgstr ""
+msgstr "Вы уверены что готовы отправить экзамен на проверку?\n"
 
 #: templates/timed_exam/ready_to_submit.html:14
 msgid ""
 "\n"
 "      After you submit your exam, your exam will be graded.\n"
 "    "
-msgstr ""
+msgstr "Экзамен будет проверен только после отправки на проверку.\n"
 
 #: templates/timed_exam/ready_to_submit.html:19
 msgid ""
 "\n"
 "      Yes, submit my timed exam.\n"
 "    "
-msgstr ""
+msgstr "Да, отправить работу на проверку.\n"
 
 #: templates/timed_exam/ready_to_submit.html:25
 msgid ""
 "\n"
 "        No, I want to continue working.\n"
 "      "
-msgstr ""
+msgstr "Нет, надо ещё поработать.\n"
 
 #: templates/timed_exam/submitted.html:6
 msgid ""
 "\n"
 "        The time allotted for this exam has expired. Your exam has been submitted and any work you completed will be graded.\n"
 "      "
-msgstr ""
+msgstr "Время, выделенное на сдачу этого экзамена, вышло. Ваша работа была отправлена на проверку автоматически."
 
 #: templates/timed_exam/submitted.html:10
 msgid ""
 "\n"
 "        You have submitted your timed exam.\n"
 "      "
-msgstr ""
+msgstr "Вы отправили экзамен на проверку.\n"
 
 #: templates/timed_exam/submitted.html:18
 #, python-format
@@ -824,65 +824,65 @@ msgid ""
 "\n"
 "      Your grade for this timed exam will be immediately available on the <a href=\"%(progress_page_url)s\">Progress</a> page.\n"
 "    "
-msgstr ""
+msgstr " <!-- секрет полушинели --> "
 
 #: templates/timed_exam/submitted.html:22
 msgid ""
 "\n"
 "        After the due date has passed, you can review the exam, but you cannot change your answers.\n"
 "      "
-msgstr ""
+msgstr "После того как прошёл день на который был назначен экзамен, вы можете просмотреть свои результаты, но не можете изменить их."
 
 #: utils.py:76
 #, python-brace-format
 msgid "{num_of_hours} hour"
-msgstr ""
+msgstr "{num_of_hours} час"
 
 #: utils.py:79
 #, python-brace-format
 msgid "{num_of_hours} hours"
-msgstr ""
+msgstr "{num_of_hours} часов"
 
 #: utils.py:87 utils.py:97
 #, python-brace-format
 msgid "{num_of_minutes} minutes"
-msgstr ""
+msgstr "{num_of_minutes} минут"
 
 #: utils.py:90
 #, python-brace-format
 msgid " and {num_of_minutes} minute"
-msgstr ""
+msgstr " и {num_of_minutes} минута"
 
 #: utils.py:92
 #, python-brace-format
 msgid "{num_of_minutes} minute"
-msgstr ""
+msgstr "{num_of_minutes} минута"
 
 #: utils.py:95
 #, python-brace-format
 msgid " and {num_of_minutes} minutes"
-msgstr ""
+msgstr " и {num_of_minutes} минут"
 
 #: views.py:92
 msgid "could not determine the course_id"
-msgstr ""
+msgstr "не удалось установить course_id"
 
 #: views.py:102
 msgid "Must be a Staff User to Perform this request."
-msgstr ""
+msgstr "Чтобы выполнить эту операцию, вы должны быть членом персонала курса."
 
 #: views.py:334 views.py:546
 #, python-brace-format
 msgid "you have {remaining_time} remaining"
-msgstr ""
+msgstr "У вас осталось {remaining_time}"
 
 #: views.py:340
 msgid "you have less than a minute remaining"
-msgstr ""
+msgstr "У вас осталось менее минуты"
 
 #: views.py:536
 msgid "timed"
-msgstr "приурочен"
+msgstr "с ограничением по времени"
 
 #: views.py:537
 msgid "practice"
