--- a/edx_proctoring/locale/ru/LC_MESSAGES/djangojs.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/djangojs.po
@@ -715,14 +715,14 @@ msgstr ""
 
 #: templates/proctored_exam/visit_exam_content.html:11
 msgid "View my exam"
-msgstr ""
+msgstr "Просмотреть мою работу"
 
 #: templates/proctored_exam/visit_exam_content.html:40
 msgid ""
 "\n"
 "      After the due date for this exam has passed, you will be able to review your answers on this page.\n"
 "    "
-msgstr ""
+msgstr "После того как пройдут последние сроки сдачи этого экзамена, вы сможете увидеть свои ответы на этой странице.\n"
 
 #: templates/timed_exam/entrance.html:4
 #, python-format
@@ -730,42 +730,42 @@ msgid ""
 "\n"
 "    %(exam_name)s is a Timed Exam (%(total_time)s)\n"
 "    "
-msgstr ""
+msgstr "%(exam_name)s является экзаменом с ограничением по времени (%(total_time)s)\n"
 
 #: templates/timed_exam/entrance.html:9
 msgid "This exam has a time limit associated with it."
-msgstr ""
+msgstr "Время отведённое на сдачу этого экзамена ограничено."
 
 #: templates/timed_exam/entrance.html:11
 msgid "To pass this exam, you must complete the problems in the time allowed."
-msgstr ""
+msgstr "Чтобы пройти его, вы должны решить все задания за выделенное время."
 
 #: templates/timed_exam/entrance.html:13
 msgid "After you select "
-msgstr ""
+msgstr "После того как вы нажмёте "
 
 #: templates/timed_exam/entrance.html:15
 msgid "I am ready to start this timed exam,"
-msgstr ""
+msgstr "Я готов к началу экзамена,"
 
 #: templates/timed_exam/entrance.html:17
 msgid "you will have "
-msgstr ""
+msgstr "у вас будет "
 
 #: templates/timed_exam/entrance.html:17
 msgid " to complete and submit the exam."
-msgstr ""
+msgstr " чтобы решить все задания и отправить их на проверку."
 
 #: templates/timed_exam/entrance.html:21
 msgid ""
 "\n"
 "        I am ready to start this timed exam.\n"
 "      "
-msgstr ""
+msgstr "Я готов к началу экзамена.\n"
 
 #: templates/timed_exam/footer.html:3
 msgid "Can I request additional time to complete my exam?"
-msgstr ""
+msgstr "Могу ли я попросить дополнительное время для завершения экзамена?"
 
 #: templates/timed_exam/footer.html:4
 msgid ""
@@ -774,49 +774,49 @@ msgid ""
 "      you might be eligible for an additional time allowance on timed exams.\n"
 "      Ask your course team for information about additional time allowances.\n"
 "    "
-msgstr ""
+msgstr "Если у вас есть уважительные причины, вы можете попросить дополнительное время.\n Для этого, обратитесь в службу технической поддержки."
 
 #: templates/timed_exam/ready_to_submit.html:4
 msgid ""
 "\n"
 "      Are you sure that you want to submit your timed exam?\n"
 "    "
-msgstr ""
+msgstr "Вы уверены что готовы отправить экзамен на проверку?\n"
 
 #: templates/timed_exam/ready_to_submit.html:14
 msgid ""
 "\n"
 "      After you submit your exam, your exam will be graded.\n"
 "    "
-msgstr ""
+msgstr "Экзамен будет проверен только после отправки на проверку.\n"
 
 #: templates/timed_exam/ready_to_submit.html:19
 msgid ""
 "\n"
 "      Yes, submit my timed exam.\n"
 "    "
-msgstr ""
+msgstr "Да, отправить работу на проверку.\n"
 
 #: templates/timed_exam/ready_to_submit.html:25
 msgid ""
 "\n"
 "        No, I want to continue working.\n"
 "      "
-msgstr ""
+msgstr "Нет, надо ещё поработать.\n"
 
 #: templates/timed_exam/submitted.html:6
 msgid ""
 "\n"
 "        The time allotted for this exam has expired. Your exam has been submitted and any work you completed will be graded.\n"
 "      "
-msgstr ""
+msgstr "Время, выделенное на сдачу этого экзамена, вышло. Ваша работа была отправлена на проверку автоматически."
 
 #: templates/timed_exam/submitted.html:10
 msgid ""
 "\n"
 "        You have submitted your timed exam.\n"
 "      "
-msgstr ""
+msgstr "Вы отправили экзамен на проверку.\n"
 
 #: templates/timed_exam/submitted.html:18
 #, python-format
@@ -824,65 +824,65 @@ msgid ""
 "\n"
 "      Your grade for this timed exam will be immediately available on the <a href=\"%(progress_page_url)s\">Progress</a> page.\n"
 "    "
-msgstr ""
+msgstr " <!-- секрет полушинели --> "
 
 #: templates/timed_exam/submitted.html:22
 msgid ""
 "\n"
 "        After the due date has passed, you can review the exam, but you cannot change your answers.\n"
 "      "
-msgstr ""
+msgstr "После того как прошёл день на который был назначен экзамен, вы можете просмотреть свои результаты, но не можете изменить их."
 
 #: utils.py:76
 #, python-brace-format
 msgid "{num_of_hours} hour"
-msgstr ""
+msgstr "{num_of_hours} час"
 
 #: utils.py:79
 #, python-brace-format
 msgid "{num_of_hours} hours"
-msgstr ""
+msgstr "{num_of_hours} часов"
 
 #: utils.py:87 utils.py:97
 #, python-brace-format
 msgid "{num_of_minutes} minutes"
-msgstr ""
+msgstr "{num_of_minutes} минут"
 
 #: utils.py:90
 #, python-brace-format
 msgid " and {num_of_minutes} minute"
-msgstr ""
+msgstr " и {num_of_minutes} минута"
 
 #: utils.py:92
 #, python-brace-format
 msgid "{num_of_minutes} minute"
-msgstr ""
+msgstr "{num_of_minutes} минута"
 
 #: utils.py:95
 #, python-brace-format
 msgid " and {num_of_minutes} minutes"
-msgstr ""
+msgstr " и {num_of_minutes} минут"
 
 #: views.py:92
 msgid "could not determine the course_id"
-msgstr ""
+msgstr "не удалось установить course_id"
 
 #: views.py:102
 msgid "Must be a Staff User to Perform this request."
-msgstr ""
+msgstr "Чтобы выполнить эту операцию вы должны быть членом персонала курса."
 
 #: views.py:334 views.py:546
 #, python-brace-format
 msgid "you have {remaining_time} remaining"
-msgstr ""
+msgstr "у вас осталось {remaining_time}"
 
 #: views.py:340
 msgid "you have less than a minute remaining"
-msgstr ""
+msgstr "у вас осталось менее минуты"
 
 #: views.py:536
 msgid "timed"
-msgstr "приурочен"
+msgstr "с ограничением по времени"
 
 #: views.py:537
 msgid "practice"
