--- a/edx_proctoring/locale/ru/LC_MESSAGES/django.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/django.po
@@ -2,14 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 17:16-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2020-11-17 20:08+0300\n"
 "Last-Translator: SpaceOyster <threeflightsdown@mail.ru>, 2016\n"
 "Language-Team: Russian (https://www.transifex.com/open-edx/teams/6205/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -17,6 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #: admin.py:88
 msgid "internally reviewed"
@@ -275,9 +275,7 @@ msgstr ""
 msgid "Go Back"
 msgstr "Вернуться"
 
-#: templates/proctored_exam/entrance.html:4
-#: templates/proctored_exam/failed-prerequisites.html:4
-#: templates/proctored_exam/pending-prerequisites.html:4
+#: templates/proctored_exam/entrance.html:4 templates/proctored_exam/failed-prerequisites.html:4 templates/proctored_exam/pending-prerequisites.html:4
 msgid ""
 "\n"
 "      This exam is proctored\n"
@@ -320,10 +318,7 @@ msgid ""
 "    "
 msgstr ""
 
-#: templates/proctored_exam/error.html:19
-#: templates/proctored_exam/expired.html:15
-#: templates/proctored_exam/rejected.html:19
-#: templates/proctored_exam/submitted.html:29
+#: templates/proctored_exam/error.html:19 templates/proctored_exam/expired.html:15 templates/proctored_exam/rejected.html:19 templates/proctored_exam/submitted.html:29
 #: templates/proctored_exam/verified.html:18
 #, python-format
 msgid ""
@@ -332,8 +327,7 @@ msgid ""
 "    "
 msgstr ""
 
-#: templates/proctored_exam/error.html:26
-#: templates/proctored_exam/rejected.html:26
+#: templates/proctored_exam/error.html:26 templates/proctored_exam/rejected.html:26
 msgid ""
 "\n"
 "      If you have concerns about your proctoring session results, contact your course team.\n"
@@ -345,20 +339,25 @@ msgid ""
 "\n"
 "      The due date for this exam has passed\n"
 "    "
-msgstr "Сроки сдачи экзамена прошли.\n"
+msgstr ""
+"\n"
+"Сроки сдачи экзамена прошли."
 
 #: templates/proctored_exam/expired.html:9 templates/timed_exam/expired.html:9
 msgid ""
 "\n"
 "      Because the due date has passed, you are no longer able to take this exam.\n"
 "    "
-msgstr "Поскольку самые поздние сроки сдачи экзамена прошли, вы не можете сдать его.\n"
+msgstr ""
+"\n"
+"Поскольку самые поздние сроки сдачи экзамена прошли, вы не можете сдать его."
 
 #: templates/proctored_exam/failed-prerequisites.html:9
 #, python-format
 msgid ""
 "\n"
-"    You did not satisfy the requirements for taking this exam with proctoring, and are not eligible for credit. See your <a href=\"%(progress_page_url)s\">Progress</a> page for a list of requirements and your status for each.\n"
+"    You did not satisfy the requirements for taking this exam with proctoring, and are not eligible for credit. See your <a href=\"%(progress_page_url)s\">Progress</a> page for a list of "
+"requirements and your status for each.\n"
 "    "
 msgstr ""
 
@@ -434,8 +433,7 @@ msgid ""
 "                "
 msgstr ""
 
-#: templates/proctored_exam/id_verification.html:44
-#: templates/proctored_exam/id_verification.html:56
+#: templates/proctored_exam/id_verification.html:44 templates/proctored_exam/id_verification.html:56
 msgid "Continue to Verification"
 msgstr ""
 
@@ -514,8 +512,7 @@ msgstr "Закрыть"
 msgid "Cannot Start Proctored Exam"
 msgstr ""
 
-#: templates/proctored_exam/instructions.html:85
-#: templates/proctored_exam/proctoring_opt_out_button.html:5
+#: templates/proctored_exam/instructions.html:85 templates/proctored_exam/proctoring_opt_out_button.html:5
 msgid "Take this exam without proctoring."
 msgstr ""
 
@@ -527,7 +524,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"    You have not completed the prerequisites for this exam. All requirements must be satisfied before you can take this proctored exam and be eligible for credit. See your <a href=\"%(progress_page_url)s\">Progress</a> page for a list of requirements in the order that they must be completed.\n"
+"    You have not completed the prerequisites for this exam. All requirements must be satisfied before you can take this proctored exam and be eligible for credit. See your <a href="
+"\"%(progress_page_url)s\">Progress</a> page for a list of requirements in the order that they must be completed.\n"
 "    "
 msgstr ""
 
@@ -542,7 +540,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"    You can take this exam with proctoring only when all prerequisites have been successfully completed. Check your <a href=\"%(progress_page_url)s\">Progress</a>  page to see if prerequisite results have been updated. You can also take this exam now without proctoring, but you will not be eligible for credit.\n"
+"    You can take this exam with proctoring only when all prerequisites have been successfully completed. Check your <a href=\"%(progress_page_url)s\">Progress</a>  page to see if "
+"prerequisite results have been updated. You can also take this exam now without proctoring, but you will not be eligible for credit.\n"
 "    "
 msgstr ""
 
@@ -553,9 +552,7 @@ msgstr ""
 #: templates/proctored_exam/proctoring_launch_callback.html:165
 #, python-format
 msgid ""
-" From this point in time, you must follow the <a "
-"href=\"%(link_urls.online_proctoring_rules)s\" target=\"_blank\">online "
-"proctoring rules</a> to pass the proctoring review for your exam. "
+" From this point in time, you must follow the <a href=\"%(link_urls.online_proctoring_rules)s\" target=\"_blank\">online proctoring rules</a> to pass the proctoring review for your exam. "
 msgstr ""
 
 #: templates/proctored_exam/proctoring_launch_callback.html:168
@@ -614,13 +611,14 @@ msgid ""
 "    "
 msgstr ""
 
-#: templates/proctored_exam/ready_to_submit.html:9
-#: templates/timed_exam/ready_to_submit.html:9
+#: templates/proctored_exam/ready_to_submit.html:9 templates/timed_exam/ready_to_submit.html:9
 msgid ""
 "\n"
 "      Make sure that you have selected \"Submit\" for each problem before you submit your exam.\n"
 "    "
-msgstr "Убедитесь что вы нажали \"Отправить\" на каждом задании перед тем как завершить экзамен.\n"
+msgstr ""
+"\n"
+"Убедитесь в том, что вы нажали кнопку «Отправить» под каждым заданием."
 
 #: templates/proctored_exam/ready_to_submit.html:14
 msgid ""
@@ -730,7 +728,9 @@ msgid ""
 "\n"
 "    %(exam_name)s is a Timed Exam (%(total_time)s)\n"
 "    "
-msgstr "%(exam_name)s является экзаменом с ограничением по времени (%(total_time)s)\n"
+msgstr ""
+"\n"
+"На выполнение этого тестирования у вас будет ровно %(total_time)s."
 
 #: templates/timed_exam/entrance.html:9
 msgid "This exam has a time limit associated with it."
@@ -761,7 +761,9 @@ msgid ""
 "\n"
 "        I am ready to start this timed exam.\n"
 "      "
-msgstr "Я готов к началу экзамена.\n"
+msgstr ""
+"\n"
+"Начать тестирование"
 
 #: templates/timed_exam/footer.html:3
 msgid "Can I request additional time to complete my exam?"
@@ -781,42 +783,54 @@ msgid ""
 "\n"
 "      Are you sure that you want to submit your timed exam?\n"
 "    "
-msgstr "Вы уверены что готовы отправить экзамен на проверку?\n"
+msgstr ""
+"\n"
+"Вы уверены, что хотите завершить тестирование?"
 
 #: templates/timed_exam/ready_to_submit.html:14
 msgid ""
 "\n"
 "      After you submit your exam, your exam will be graded.\n"
 "    "
-msgstr "Экзамен будет проверен только после отправки на проверку.\n"
+msgstr ""
+"\n"
+"Экзамен будет проверен только после отправки на проверку."
 
 #: templates/timed_exam/ready_to_submit.html:19
 msgid ""
 "\n"
 "      Yes, submit my timed exam.\n"
 "    "
-msgstr "Да, отправить работу на проверку.\n"
+msgstr ""
+"\n"
+"Завершить тестирование"
 
 #: templates/timed_exam/ready_to_submit.html:25
 msgid ""
 "\n"
 "        No, I want to continue working.\n"
 "      "
-msgstr "Нет, надо ещё поработать.\n"
+msgstr ""
+"\n"
+"Вернуться к тестированию"
 
 #: templates/timed_exam/submitted.html:6
 msgid ""
 "\n"
 "        The time allotted for this exam has expired. Your exam has been submitted and any work you completed will be graded.\n"
 "      "
-msgstr "Время, выделенное на сдачу этого экзамена, вышло. Ваша работа была отправлена на проверку автоматически."
+msgstr ""
+"\n"
+"Время закончилось. Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку. Результаты тестирования будут опубликованы позже. Следите за новостями курса."
 
 #: templates/timed_exam/submitted.html:10
 msgid ""
 "\n"
 "        You have submitted your timed exam.\n"
 "      "
-msgstr "Вы отправили экзамен на проверку.\n"
+msgstr ""
+"\n"
+"Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку. Результаты тестирования будут опубликованы позже. Следите за новостями курса."
 
 #: templates/timed_exam/submitted.html:18
 #, python-format
@@ -824,14 +838,18 @@ msgid ""
 "\n"
 "      Your grade for this timed exam will be immediately available on the <a href=\"%(progress_page_url)s\">Progress</a> page.\n"
 "    "
-msgstr " <!-- секрет полушинели --> "
+msgstr ""
+"\n"
+" <!-- секрет полушинели --> "
 
 #: templates/timed_exam/submitted.html:22
 msgid ""
 "\n"
 "        After the due date has passed, you can review the exam, but you cannot change your answers.\n"
 "      "
-msgstr "После того как прошёл день на который был назначен экзамен, вы можете просмотреть свои результаты, но не можете изменить их."
+msgstr ""
+"\n"
+"После того как прошёл день на который был назначен экзамен, вы можете просмотреть свои результаты, но не можете изменить их."
 
 #: utils.py:76
 #, python-brace-format
