--- a/edx_proctoring/locale/ru/LC_MESSAGES/django.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 17:16-0500\n"
-"PO-Revision-Date: 2020-11-17 23:25+0300\n"
+"PO-Revision-Date: 2020-11-17 23:59+0300\n"
 "Last-Translator: SpaceOyster <threeflightsdown@mail.ru>, 2016\n"
 "Language-Team: Russian (https://www.transifex.com/open-edx/teams/6205/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -348,7 +348,7 @@ msgid ""
 "\n"
 "      Because the due date has passed, you are no longer able to take this exam.\n"
 "    "
-msgstr ""
+msgstr "\n"
 
 #: templates/proctored_exam/failed-prerequisites.html:9
 #, python-format
