--- a/edx_proctoring/locale/ru/LC_MESSAGES/django.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 17:16-0500\n"
-"PO-Revision-Date: 2020-11-17 23:59+0300\n"
+"PO-Revision-Date: 2020-11-18 00:45+0300\n"
 "Last-Translator: SpaceOyster <threeflightsdown@mail.ru>, 2016\n"
 "Language-Team: Russian (https://www.transifex.com/open-edx/teams/6205/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -819,7 +819,7 @@ msgid ""
 "      "
 msgstr ""
 "\n"
-"Время закончилось. Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку. Результаты тестирования будут опубликованы позже. Следите за новостями курса."
+"Время закончилось. Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку."
 
 #: templates/timed_exam/submitted.html:10
 msgid ""
@@ -828,7 +828,7 @@ msgid ""
 "      "
 msgstr ""
 "\n"
-"Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку. Результаты тестирования будут опубликованы позже. Следите за новостями курса."
+"Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку."
 
 #: templates/timed_exam/submitted.html:18
 #, python-format
@@ -847,7 +847,7 @@ msgid ""
 "      "
 msgstr ""
 "\n"
-"После того как прошёл день на который был назначен экзамен, вы можете просмотреть свои результаты, но не можете изменить их."
+"Результаты тестирования будут опубликованы позже. Следите за новостями курса."
 
 #: utils.py:76
 #, python-brace-format
