--- a/edx_proctoring/locale/ru/LC_MESSAGES/djangojs.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 17:16-0500\n"
-"PO-Revision-Date: 2020-11-17 20:09+0300\n"
+"PO-Revision-Date: 2020-11-18 00:45+0300\n"
 "Last-Translator: Tatiane Berseneva <karmen_arroba@mail.ru>, 2016\n"
 "Language-Team: Russian (https://www.transifex.com/open-edx/teams/6205/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -803,14 +803,14 @@ msgid ""
 "\n"
 "        The time allotted for this exam has expired. Your exam has been submitted and any work you completed will be graded.\n"
 "      "
-msgstr "Время закончилось. Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку. Результаты тестирования будут опубликованы позже. Следите за новостями курса."
+msgstr "Время закончилось. Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку."
 
 #: templates/timed_exam/submitted.html:10
 msgid ""
 "\n"
 "        You have submitted your timed exam.\n"
 "      "
-msgstr "Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку. Результаты тестирования будут опубликованы позже. Следите за новостями курса.\n"
+msgstr "Все ответы, под которыми вы нажали кнопку «Отправить», были отправлены на проверку.\n"
 
 #: templates/timed_exam/submitted.html:18
 #, python-format
@@ -825,7 +825,7 @@ msgid ""
 "\n"
 "        After the due date has passed, you can review the exam, but you cannot change your answers.\n"
 "      "
-msgstr "После того как прошёл день на который был назначен экзамен, вы можете просмотреть свои результаты, но не можете изменить их."
+msgstr " Результаты тестирования будут опубликованы позже. Следите за новостями курса."
 
 #: utils.py:76
 #, python-brace-format
