--- a/edx_proctoring/locale/ru/LC_MESSAGES/django.po
+++ b/edx_proctoring/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 17:16-0500\n"
-"PO-Revision-Date: 2020-11-18 00:45+0300\n"
+"PO-Revision-Date: 2020-11-18 14:20+0300\n"
 "Last-Translator: SpaceOyster <threeflightsdown@mail.ru>, 2016\n"
 "Language-Team: Russian (https://www.transifex.com/open-edx/teams/6205/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -341,7 +341,7 @@ msgid ""
 "    "
 msgstr ""
 "\n"
-"Срок сдачи экзамена прошел."
+"Срок сдачи прошёл."
 
 #: templates/proctored_exam/expired.html:9 templates/timed_exam/expired.html:9
 msgid ""
